# cvxkerb

./: pyproject.toml
notebooks/: DCP_analysis.ipynb  DPP.ipynb  solving_the_problem.ipynb  solving_the_problem_solution.ipynb
