[tool.poetry]
name = "cvxkerb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
cvxpy = "^1.3.2"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
ipython = "^8.14.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
